ucenter增加通用mapper，mybatis逆向工程自动生成dao、model、*.xml

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>everest-storage</module>
         <module>everest-mail</module>
+        <module>everest-ucenter</module>
     </modules>
 
     <repositories>
