重新用回springcloud、增加通知功能

--- a/everest-notification/pom.xml
+++ b/everest-notification/pom.xml
@@ -9,7 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>everest-mail</artifactId>
+    <artifactId>everest-notification</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>notification-api</module>
+        <module>notification-server</module>
+    </modules>
 
 
 </project>
