--- a/everest-ucenter/ucenter-server/src/main/resources/generator/generator.properties
+++ b/everest-ucenter/ucenter-server/src/main/resources/generator/generator.properties
@@ -1,5 +1,5 @@
-project=src/main/java
-resources=src/main/resources
+project=../ucenter-api/src/main/java
+resources=../ucenter-api/src/main/resources
 jdbc_driver=com.mysql.jdbc.Driver
 jdbc_url=jdbc:mysql://118.31.20.148:3306/business_cornerstone
 jdbc_user=root
