--- a/everest-ucenter/ucenter-api/pom.xml
+++ b/everest-ucenter/ucenter-api/pom.xml
@@ -11,5 +11,20 @@
 
     <artifactId>ucenter-api</artifactId>
 
-
+    <dependencies>
+        <!--mapper-->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <!--引入 mybatis-generator-core 才能使用逆向工程-->
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.2</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
 </project>
