--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>everest-storage</module>
-        <module>everest-mail</module>
         <module>everest-ucenter</module>
+        <module>everest-notification</module>
     </modules>
 
     <repositories>
