--- a/everest-ucenter/ucenter-server/src/main/resources/generator/generator.properties
+++ b/everest-ucenter/ucenter-server/src/main/resources/generator/generator.properties
@@ -1,6 +1,7 @@
-project=../ucenter-api/src/main/java
-resources=../ucenter-api/src/main/resources
+server_project=../ucenter-api/src/main/java
+model_project=../ucenter-model/src/main/java
+mapper_resources=../ucenter-api/src/main/resources
 jdbc_driver=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://118.31.20.148:3306/business_cornerstone
+jdbc_url=jdbc:mysql://118.31.20.148:3306/everest
 jdbc_user=root
 jdbc_password=123456
