--- a/everest-ucenter/ucenter-model/pom.xml
+++ b/everest-ucenter/ucenter-model/pom.xml
@@ -3,19 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>everest</artifactId>
+        <artifactId>everest-ucenter</artifactId>
         <groupId>com.hup.everest</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>everest-ucenter</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>ucenter-api</module>
-        <module>ucenter-server</module>
-        <module>ucenter-model</module>
-    </modules>
+    <artifactId>ucenter-model</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 </project>
